--- a/style.css
+++ b/style.css
@@ -47,9 +47,20 @@ a {
 }
 
 ul {
-  list-style: none;
   padding-left: 0;
 }
+
+li {
+  list-style: none;
+}
+
+button {
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  outline: none;
+}
+
 /* Typography */
 h1 {
   font-size: var(--font-large);
@@ -111,4 +122,63 @@ p {
 
 .navbar_munu_item:hover {
   background-color: var(--color-dark-blue);
+}
+
+/* home */
+
+#Home {
+  background: url("image/home-background.jpg") center/cover no-repeat;
+  padding: 40px;
+  text-align: center;
+}
+
+.home_avatar {
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  border: 2px solid var(--color-light-white);
+}
+
+.home_title,
+.home_description {
+  color: var(--color-black);
+}
+
+.home_contact {
+  color: var(--color-black);
+  font-size: var(--font-regular);
+  font-weight: var(--weight-bold);
+  margin: 24px;
+  padding: 8px 12px;
+  border: 2px solid var(--color-black);
+  border-radius: var(--size-border-radius);
+}
+
+/* section common */
+.section {
+  padding: 50px;
+  text-align: center;
+  max-width: 1200px;
+  margin: auto;
+}
+
+/* about */
+.about_majors {
+  display: flex;
+  justify-content: space-between;
+  margin: 80px;
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+.major_icon {
+  width: 170px;
+  height: 170px;
+  line-height: 170px;
+  font-size: 70px;
+  margin: auto;
+  color: var(--color-blue);
+  border: 1px solid var(--color-blue);
+  border-radius: 50%;
+  margin-bottom: 16px;
 }
