--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
   --color-light-grey: #7c7979;
   --color-blue: #73aace;
   --color-dark-blue: #3677a1;
+  --color-green: #a8f6af;
   --color-yellow: #fff7d1;
   --color-orange: #feb546;
   --color-black: #000000;
@@ -28,6 +29,9 @@
 
   /* Size */
   --size-border-radius: 4px;
+
+  /* animatiom */
+  --animation-duration: 300ms;
 }
 
 /* Universal tags */
@@ -181,4 +185,23 @@ p {
   border: 1px solid var(--color-blue);
   border-radius: 50%;
   margin-bottom: 16px;
+}
+
+.major_icon i {
+  transition: all var(--animation-duration) ease;
+}
+.major_icon:hover i {
+  color: var(--color-green);
+  transform: rotate(-30deg) scale(1.1);
+}
+.major_title,
+.major_description {
+  color: var(--color-dark-grey);
+}
+
+.major_description {
+  font-size: var(--font-small);
+}
+
+.job {
 }
