--- a/style.css
+++ b/style.css
@@ -162,6 +162,10 @@ p {
 .section {
   padding: 50px;
   text-align: center;
+  margin: auto;
+}
+
+.section_container {
   max-width: 1200px;
   margin: auto;
 }
@@ -224,4 +228,27 @@ p {
 }
 .job_period {
   font-size: var(--font-micro);
+}
+/*skill*/
+
+#skills {
+  background-color: var(--color-orange);
+}
+
+.skillset {
+  display: flex;
+  background-color: var(--color-light-grey);
+  color: var(--color-light-white);
+}
+.skillset_title {
+  color: var(--color-white);
+}
+.skillset_left {
+  flex-basis: 60%;
+  background-color: var(--color-dark-grey);
+}
+
+.skillset_right {
+  flex-basis: 40%;
+  background-color: var(--color-dark-grey);
 }
