--- a/style.css
+++ b/style.css
@@ -194,10 +194,12 @@ p {
 .major_icon i {
   transition: all var(--animation-duration) ease;
 }
+
 .major_icon:hover i {
   color: var(--color-green);
   transform: rotate(-30deg) scale(1.1);
 }
+
 .major_title,
 .major_description {
   color: var(--color-dark-grey);
@@ -211,24 +213,30 @@ p {
   width: 120px;
   height: 40px;
 }
+
 .job {
   display: flex;
   align-items: center;
 }
+
 .job_discription {
   margin: 0 16px;
   text-align: left;
 }
+
 .job_name,
 .job_period {
   color: var(--color-dark-grey);
 }
+
 .job_name {
   font-size: var(--font-small);
 }
+
 .job_period {
   font-size: var(--font-micro);
 }
+
 /*skill*/
 
 #skills {
@@ -239,16 +247,50 @@ p {
   display: flex;
   background-color: var(--color-light-grey);
   color: var(--color-light-white);
+  margin: 20px 0;
 }
+
 .skillset_title {
   color: var(--color-white);
 }
+
 .skillset_left {
   flex-basis: 60%;
   background-color: var(--color-dark-grey);
+  padding: 20px 40px;
+}
+
+.skill {
+  margin-bottom: 32px;
+}
+
+.skill_description {
+  display: flex;
+  justify-content: space-between;
+}
+
+.skill_bar {
+  width: 100%;
+  height: 3px;
+  background-color: var(--color-grey);
+}
+
+.skill_value {
+  width: 70%;
+  height: 3px;
+  background-color: var(--color-orange);
 }
 
 .skillset_right {
   flex-basis: 40%;
-  background-color: var(--color-dark-grey);
+
+}
+
+.tools {
+  background: var(--color-grey);
+}
+
+.tools,
+.etc {
+  padding: 20px;
 }
