--- a/style.css
+++ b/style.css
@@ -283,7 +283,6 @@ p {
 
 .skillset_right {
   flex-basis: 40%;
-
 }
 
 .tools {
@@ -299,37 +298,15 @@ p {
 .work_categories {
   margin: 40px;
 }
-
 .category_btn {
-  border: 1px solid dark var(--color-dark-white);
-  border-radius: var(--size-border-radius);
+  border: 1px solid var(--color-dark-white);
+  border-radius: var(--font-medium-size-border-radius);
   font-size: var(--font-regular);
   padding: 8px 48px;
 }
 
-.category_btn .active,
+.cat egory_btn.active,
 .category_btn :hover {
   background-color: var(--color-blue);
   color: var(--color-white);
-}
-
-.cotegory_btn .active .category_count,
-.category_btn: :hover . .category_count {
-  opacity: 1;
-  top: 0;
-}
-
-.category_count {
-  background-color: color var(--color-onrange);
-  border-radius: 50%;
-  color: var(--color-white);
-  width: 24px;
-  height: 24px;
-  line-height: 24px;
-  display: inline-block;
-  position: relative;
-  top: -20px;
-  left: 4px;
-  opacity: 0;
-  transition: all var(--animation-duration) ease-in;
 }
