--- a/style.css
+++ b/style.css
@@ -331,3 +331,58 @@ p {
   opacity: 0;
   transition: all var(--animation-duration);
 }
+
+.work_projects {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.project {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 280px;
+  height: 250px;
+  margin: 2px;
+  background-color: var(--color-dark-white);
+}
+.project_img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.project_description {
+  position: absolute;
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  opacity: 0;
+  transform: translateY(0px);
+  transition: all var(--animation-duration) ease-in;
+}
+
+.project:hover .project_description {
+  opacity: 0.8;
+}
+
+.project_description h3 {
+  color: var(--color-white);
+}
+
+.project_description h3:after {
+  content: "";
+  display: block;
+  position: relative;
+  left: 50%;
+  width: 25px;
+  height: 2px;
+  margin-left: -12px;
+  margin-top: 8px;
+  background-color: var(--color-dark-white);
+}
