--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
   --color-yellow: #fff7d1;
   --color-orange: #feb546;
   --color-black: #000000;
+  --color-blue2: #11cae2;
 
   /* Font size */
   --font-large: 48px;
@@ -74,7 +75,7 @@ h1 {
 }
 
 h2 {
-  font-size: var(--font-regular);
+  font-size: var(--font-medium);
   font-weight: var(--weight-semi-bold);
   color: var(--color-black);
   margin: 8px 0;
@@ -385,4 +386,29 @@ p {
   margin-left: -12px;
   margin-top: 8px;
   background-color: var(--color-dark-white);
+}
+
+#contact {
+  background-color: var(--color-blue2);
+}
+
+.contact_title,
+.contact_email,
+.contact_rights {
+  color: var(--color-white);
+}
+
+.contact_title {
+  margin: 32px 0;
+}
+
+.contact_links {
+  font-size: var(--font-large);
+  margin: 24px 0;
+}
+
+.contact_links i:hover {
+  transform: scale(1.1);
+  color: var(--color-yellow);
+  transition: all var(--animation-duration) ease-in;
 }
