--- a/style.css
+++ b/style.css
@@ -447,6 +447,28 @@ p {
   transition: all var(--animation-duration) ease-in;
 }
 
+/* scroll*/
+.arrow-up {
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  width: 70px;
+  height: 80px;
+  font-size: 50px;
+  color: var(--color-white);
+  background-color: var(--color-blue2);
+  border-radius: 50%;
+  pointer-events: none;
+  opacity: 0;
+  transition: all 300ms ease-in;
+
+}
+
+.arrow-up.visible {
+  opacity: 1;
+  pointer-events: auto;
+}
+
 /*For below 768px screen width*/
 @media screen and (max-width: 768px) {
   .navbar_toggle-btn {
