--- a/style.css
+++ b/style.css
@@ -117,7 +117,6 @@ p {
   background-color: var(--color-navy);
   display: flex;
   height: 72px;
-
 }
 
 .navbar_menu {
@@ -378,6 +377,10 @@ p {
   background-color: var(--color-dark-white);
 }
 
+.project.invisible {
+  display: none;
+}
+
 .project_img {
   max-width: 100%;
   max-height: 100%;
@@ -461,7 +464,6 @@ p {
   pointer-events: none;
   opacity: 0;
   transition: all 300ms ease-in;
-
 }
 
 .arrow-up.visible {
