--- a/style.css
+++ b/style.css
@@ -377,7 +377,7 @@ p {
   background-color: var(--color-dark-white);
 }
 
-.project.invisible {
+.projects.invisible {
   display: none;
 }
 
@@ -405,7 +405,7 @@ p {
 }
 
 .project_description h3 {
-  color: var(--color-white);
+  color: var(--color-orange);
 }
 
 .project_description h3:after {
@@ -413,9 +413,9 @@ p {
   display: block;
   position: relative;
   left: 50%;
-  width: 25px;
+  width: 50px;
   height: 2px;
-  margin-left: -12px;
+  transform: translateX(-50%);
   margin-top: 8px;
   background-color: var(--color-dark-white);
 }
@@ -480,14 +480,20 @@ p {
   #navbar {
     flex-direction: column;
     align-items: flex-start;
+    background-color: var(--color-navy);
   }
-
+  #navbar.navbar--dark {
+    padding: 16px;
+  }
   .navbar_menu {
     flex-direction: column;
     text-align: center;
     width: 100%;
+    display: none;
   }
-
+  .navbar_menu.open {
+    display: block;
+  }
   .about_majors {
     flex-direction: column;
   }
