--- a/style.css
+++ b/style.css
@@ -377,10 +377,6 @@ p {
   background-color: var(--color-dark-white);
 }
 
-.projects.invisible {
-  display: none;
-}
-
 .project_img {
   max-width: 100%;
   max-height: 100%;
@@ -405,7 +401,7 @@ p {
 }
 
 .project_description h3 {
-  color: var(--color-orange);
+  color: var(--color-white);
 }
 
 .project_description h3:after {
@@ -413,9 +409,9 @@ p {
   display: block;
   position: relative;
   left: 50%;
-  width: 50px;
+  width: 25px;
   height: 2px;
-  transform: translateX(-50%);
+  margin-left: -12px;
   margin-top: 8px;
   background-color: var(--color-dark-white);
 }
@@ -480,20 +476,14 @@ p {
   #navbar {
     flex-direction: column;
     align-items: flex-start;
-    background-color: var(--color-navy);
   }
-  #navbar.navbar--dark {
-    padding: 16px;
-  }
+
   .navbar_menu {
     flex-direction: column;
     text-align: center;
     width: 100%;
-    display: none;
   }
-  .navbar_menu.open {
-    display: block;
-  }
+
   .about_majors {
     flex-direction: column;
   }
