--- a/style.css
+++ b/style.css
@@ -364,6 +364,13 @@ p {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  opacity: 1;
+  transition: all var(--animation-duration) ease-out;
+}
+
+.work_projects.anim-out {
+  opacity: 0;
+  transform: scale(0.96) translateY(40px);
 }
 
 .project {
@@ -375,6 +382,10 @@ p {
   height: 250px;
   margin: 2px;
   background-color: var(--color-dark-white);
+}
+
+.project.invisible {
+  display: none;
 }
 
 .project_img {
