--- a/style.css
+++ b/style.css
@@ -134,13 +134,12 @@ p {
   margin: 0 4px;
   cursor: pointer;
   border-radius: var(--size-border-radius);
-}
-
-.navbar_munu_item.active {
-  border: 1px solid var(--color-white);
+  border: 1px solid transparent;
+  border-radius: var(--size-border-radius);
 }
 
 .navbar_munu_item:hover {
+  border-color: var(--color-white);
   background-color: var(--color-dark-blue);
 }
 
@@ -333,13 +332,13 @@ p {
   padding: 8px 48px;
 }
 
-.category_btn.active,
+.category_btn.selected,
 .category_btn:hover {
   background-color: var(--color-blue);
   color: var(--color-white);
 }
 
-.category_btn.active .category_count,
+.category_btn.selected .category_count,
 .category_btn:hover .category_count {
   opacity: 1;
   top: 0;
@@ -412,7 +411,7 @@ p {
 }
 
 .project_description h3 {
-  color: var(--color-white);
+  color: var(--color-orange);
 }
 
 .project_description h3:after {
@@ -420,9 +419,9 @@ p {
   display: block;
   position: relative;
   left: 50%;
-  width: 25px;
+  width: 50px;
   height: 2px;
-  margin-left: -12px;
+  transform: translateX(-50%);
   margin-top: 8px;
   background-color: var(--color-dark-white);
 }
@@ -487,12 +486,22 @@ p {
   #navbar {
     flex-direction: column;
     align-items: flex-start;
+    background-color: var(--color-navy);
+  }
+
+  #navbar.navbar--dark {
+    padding: 16px;
   }
 
   .navbar_menu {
     flex-direction: column;
     text-align: center;
     width: 100%;
+    display: none;
+  }
+
+  .navbar_menu.open {
+    display: block;
   }
 
   .about_majors {
