--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ p {
 #navbar.navbar--dark {
   background-color: var(--color-navy);
   display: flex;
-  height: 72px;
+  height: 59px;
 }
 
 .navbar_menu {
@@ -183,6 +183,9 @@ p {
   border-radius: var(--size-border-radius);
 }
 
+.home_contact:hover {
+  background-color: var(--color-blue2);
+}
 /* section common */
 .section {
   padding: 50px;
@@ -330,6 +333,7 @@ p {
   border-radius: var(--font-medium-size-border-radius);
   font-size: var(--font-regular);
   padding: 8px 48px;
+  position: relative;
 }
 
 .category_btn.selected,
@@ -352,11 +356,11 @@ p {
   height: 24px;
   line-height: 24px;
   display: inline-block;
-  position: relative;
+  position: absolute;
   top: -20px;
-  left: 4px;
+  right: 8px;
   opacity: 0;
-  transition: all var(--animation-duration);
+  transition: all var(--animation-duration) ease-in;
 }
 
 .work_projects {
@@ -479,10 +483,25 @@ p {
 
 /*For below 768px screen width*/
 @media screen and (max-width: 768px) {
+  :root {
+    /* Font size */
+    --font-large: 30px;
+    --font-medium: 18px;
+    --font-regular: 16px;
+    --font-small: 14px;
+    --font-micro: 12px;
+  }
+
   .navbar_toggle-btn {
     display: block;
   }
 
+  .navbar_toggle-btn {
+    display: block;
+    top: 16px;
+    right: 16px;
+    font-size: var(--font-medium);
+  }
   #navbar {
     flex-direction: column;
     align-items: flex-start;
@@ -504,19 +523,38 @@ p {
     display: block;
   }
 
+  .section {
+    padding: 16px;
+    padding-top: 40px;
+  }
   .about_majors {
     flex-direction: column;
+    margin-top: 30px;
+    margin-bottom: 0px;
   }
 
   .major {
-    margin-bottom: 38px;
+    margin-bottom: 30px;
   }
 
   .skillset {
     flex-direction: column;
   }
 
+  .category_btn {
+    margin: 4px 0;
+    width: 100%;
+  }
   .project {
     flex-grow: 1;
+  }
+
+  .arrow-up {
+    width: 50px;
+    height: 50px;
+    font-size: 30px;
+    line-height: 50px;
+    right: 16px;
+    bottom: 16px;
   }
 }
